temp_fonts deleted

--- a/handwritten_and_printed_text_generator/Trdg_synthetic_word_generator.ipynb
+++ b/handwritten_and_printed_text_generator/Trdg_synthetic_word_generator.ipynb
@@ -223,7 +223,7 @@
         "custom_fonts_dir = './fonts/'\n",
         "\n",
         "# Create a local fonts directory for the script to use\n",
-        "local_fonts_dir = './temp_fonts/'\n",
+        "local_fonts_dir = './fonts/'\n",
         "os.makedirs(local_fonts_dir, exist_ok=True)\n",
         "\n",
         "# Paths for texture images\n",
@@ -234,19 +234,6 @@
         "\n",
         "# Create the output directory\n",
         "os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "# Copy fonts from Drive to local directory\n",
-        "if os.path.exists(custom_fonts_dir):\n",
-        "    print(f\"Custom fonts directory found. Copying fonts to local directory...\")\n",
-        "    font_files = [f for f in os.listdir(custom_fonts_dir) if f.endswith('.ttf') or f.endswith('.otf')]\n",
-        "    for font_file in font_files:\n",
-        "        src_path = os.path.join(custom_fonts_dir, font_file)\n",
-        "        dst_path = os.path.join(local_fonts_dir, font_file)\n",
-        "        shutil.copy2(src_path, dst_path)\n",
-        "    print(f\"Copied {len(font_files)} fonts to {local_fonts_dir}\")\n",
-        "else:\n",
-        "    print(f\"Custom fonts directory not found at {custom_fonts_dir}\")\n",
-        "    exit(1)\n",
         "\n",
         "# Generation parameters\n",
         "total_target_images = 230\n",
