--- a/handwritten_and_printed_text_generator/trdg_synthetic_sentence_creator.ipynb
+++ b/handwritten_and_printed_text_generator/trdg_synthetic_sentence_creator.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "25408483",
    "metadata": {},
    "outputs": [
@@ -137,53 +137,20 @@
      "text": [
       "Using global random seed: 42\n",
       "\n",
-      "Generating approximately 50 word images...\n",
+      "Generating approximately 50 sentence images...\n",
       "Using random seed: 42\n",
       "No image files found in ./textures/\n",
       "Texture backgrounds available: False in directory ./validated_textures/\n",
       "Processing batch 1 (50 images)...\n",
-      "Executing command: trdg --dict ./sample_data/turkish_sentences.txt --output_dir C:\\Users\\LEGION\\AppData\\Local\\Temp\\tmpoem0edc1 --count 50 --language tr --extension png --word_split --font_dir ./fonts/printed_fonts/ --blur 2 --random_blur --distorsion 1 --distorsion_orientation 1 --skew_angle 5 --random_skew --background 1 --format 66 --name_format 2 --text_color #000000 --margins 15,15,15,15 --space_width 0.9 --character_spacing 1 --alignment 1\n",
-      "Current working directory: c:\\Users\\LEGION\\Desktop\\proje son\\GRADUATION_PROJECT\\handwritten_and_printed_text_generator\n",
-      "Input file exists: True\n",
-      "Font directory exists: True\n",
-      "Font files: ['OpenSans-Bold.ttf', 'OpenSans-Italic.ttf', 'OpenSans-Light.ttf', 'OpenSans-Medium.ttf', 'OpenSans-Regular.ttf', 'Roboto-Bold.ttf', 'Roboto-LightItalic.ttf', 'Roboto-Medium.ttf', 'Roboto-Regular.ttf', 'Roboto-Thin.ttf', 'SourceSans3-Bold.ttf', 'SourceSans3-Italic.ttf', 'SourceSans3-Light.ttf', 'SourceSans3-LightItalic.ttf', 'SourceSans3-Regular.ttf']\n",
-      "TRDG test result: 1\n",
-      "Error generating dataset: [WinError 2] Sistem belirtilen dosyayı bulamıyor\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\LEGION\\AppData\\Local\\Temp\\ipykernel_25796\\2192743275.py\", line 332, in <module>\n",
-      "    actual_count, global_image_counter = generate_sentence_images(\n",
-      "                                         ~~~~~~~~~~~~~~~~~~~~~~~~^\n",
-      "        total_target_images, global_image_counter\n",
-      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "    )\n",
-      "    ^\n",
-      "  File \"C:\\Users\\LEGION\\AppData\\Local\\Temp\\ipykernel_25796\\2192743275.py\", line 262, in generate_sentence_images\n",
-      "    result = subprocess.run(cmd, check=True, capture_output=True, text=True)\n",
-      "  File \"c:\\Users\\LEGION\\.conda\\envs\\proje_ortam\\Lib\\subprocess.py\", line 554, in run\n",
-      "    with Popen(*popenargs, **kwargs) as process:\n",
-      "         ~~~~~^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\LEGION\\.conda\\envs\\proje_ortam\\Lib\\subprocess.py\", line 1039, in __init__\n",
-      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
-      "    ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "                        pass_fds, cwd, env,\n",
-      "                        ^^^^^^^^^^^^^^^^^^^\n",
-      "    ...<5 lines>...\n",
-      "                        gid, gids, uid, umask,\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "                        start_new_session, process_group)\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\LEGION\\.conda\\envs\\proje_ortam\\Lib\\subprocess.py\", line 1554, in _execute_child\n",
-      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
-      "                       ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^\n",
-      "                             # no special security\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^^\n",
-      "    ...<4 lines>...\n",
-      "                             cwd,\n",
-      "                             ^^^^\n",
-      "                             startupinfo)\n",
-      "                             ^^^^^^^^^^^^\n",
-      "FileNotFoundError: [WinError 2] Sistem belirtilen dosyayı bulamıyor\n",
-      "\n"
+      "Executing command: trdg --dict ./sample_data/turkish_sentences.txt --output_dir C:\\Users\\LEGION\\AppData\\Local\\Temp\\tmp14mod4l4 --count 50 --language tr --extension png --word_split --font_dir ./fonts/printed_fonts/ --blur 2 --random_blur --skew_angle 5 --random_skew --fit --orientation 0 --background 1 --format 150 --name_format 2 --text_color #000000 --margins 15,15,15,15 --space_width 0.9 --character_spacing 1 --alignment 1\n",
+      "Command executed successfully\n",
+      "Generated 50 images in temporary directory\n",
+      "Processed 50 images in this batch\n",
+      "Total images generated: 50\n",
+      "Labels saved to ./output/sentences/labels.txt\n",
+      "\n",
+      "Dataset generation complete. Total images: 50\n",
+      "Dataset available at: ./output/sentences/\n"
      ]
     }
    ],
@@ -366,8 +333,8 @@
     "    }\n",
     "\n",
     "def generate_sentence_images(target_count, global_counter):\n",
-    "    \"\"\"Main function to generate word images\"\"\"\n",
-    "    print(f\"\\nGenerating approximately {target_count} word images...\")\n",
+    "    \"\"\"Main function to generate sentence images\"\"\"\n",
+    "    print(f\"\\nGenerating approximately {target_count} sentence images...\")\n",
     "    print(f\"Using random seed: {GLOBAL_SEED}\")\n",
     "\n",
     "    # Prepare texture backgrounds if needed\n",
@@ -378,11 +345,9 @@
     "    total_generated = 0\n",
     "    labels = {}\n",
     "\n",
-    "    # TRDG parameters\n",
+    "    # TRDG parameters for sentences\n",
     "    blur = '2'\n",
     "    skew_angle = '5'\n",
-    "    distorsion = '1'\n",
-    "    image_heights = [62, 64, 66]\n",
     "\n",
     "    # Create batches\n",
     "    remaining = target_count\n",
@@ -399,7 +364,7 @@
     "            # Get varied parameters for this batch\n",
     "            varied_params = select_varied_parameters()\n",
     "\n",
-    "            # Build the TRDG command\n",
+    "            # Build the TRDG command for sentences\n",
     "            cmd = [\n",
     "                'trdg',\n",
     "                '--dict', input_file,\n",
@@ -411,12 +376,12 @@
     "                '--font_dir', fonts_dir,\n",
     "                '--blur', blur,\n",
     "                '--random_blur',\n",
-    "                '--distorsion', distorsion,\n",
-    "                '--distorsion_orientation', '1',\n",
     "                '--skew_angle', skew_angle,\n",
     "                '--random_skew',\n",
+    "                '--fit',\n",
+    "                '--orientation', '0',\n",
     "                '--background', background,\n",
-    "                '--format', str(random.choice(image_heights)),\n",
+    "                '--format', '150',  # Set height for sentences\n",
     "                '--name_format', '2',\n",
     "                '--text_color', varied_params['text_color'],\n",
     "                '--margins', varied_params['margins'],\n",
@@ -435,20 +400,6 @@
     "            # Run the command\n",
     "            try:\n",
     "                print(f\"Executing command: {' '.join(cmd)}\")\n",
-    "                print(f\"Current working directory: {os.getcwd()}\")\n",
-    "                print(f\"Input file exists: {os.path.exists(input_file)}\")\n",
-    "                print(f\"Font directory exists: {os.path.exists(fonts_dir)}\")\n",
-    "                print(f\"Font files: {os.listdir(fonts_dir) if os.path.exists(fonts_dir) else 'Directory not found'}\")\n",
-    "\n",
-    "                # Test TRDG command\n",
-    "                import sys\n",
-    "                test_cmd = [sys.executable, '-m', 'trdg', '--help']\n",
-    "                try:\n",
-    "                    test_result = subprocess.run(test_cmd, capture_output=True, text=True, timeout=10)\n",
-    "                    print(f\"TRDG test result: {test_result.returncode}\")\n",
-    "                except Exception as e:\n",
-    "                    print(f\"TRDG test failed: {e}\")\n",
-    "\n",
     "                result = subprocess.run(cmd, check=True, capture_output=True, text=True)\n",
     "                print(f\"Command executed successfully\")\n",
     "            except subprocess.CalledProcessError as e:\n",
@@ -518,7 +469,7 @@
     "    # Initialize global image counter\n",
     "    global_image_counter = 0\n",
     "\n",
-    "    # Generate word images\n",
+    "    # Generate sentence images\n",
     "    actual_count, global_image_counter = generate_sentence_images(\n",
     "        total_target_images, global_image_counter\n",
     "    )\n",
